# claude-plugins

./: Makefile  design.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
swiss-cheese/: pyproject.toml
swiss-cheese/.claude-plugin/: plugin.json
swiss-cheese/agents/: formal-verification-agent.md  requirements-agent.md  safety-agent.md  static-analysis-agent.md
swiss-cheese/commands/: cancel.md  loop.md  skip-layer.md  status.md  swiss-cheese.md
swiss-cheese/examples/: Makefile.swiss-cheese  example_project.toml
swiss-cheese/hooks/: __init__.py  hooks.json  orchestrator.py  schema.py  session_init.py  session_start.py
swiss-cheese/skills/: swiss-cheese-guide.md
swiss-cheese/tests/: __init__.py  test_hooks.py  test_orchestrate.py  test_schema.py
